--- a/bool.ipynb
+++ b/bool.ipynb
@@ -2,32 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ile kosztuję kilogram jabłek? 5\n",
-      "Ile kosztuję kilogram bananów? 8\n",
-      "Ile kosztuję kilogram truskawek? 12\n",
-      "kilogram jabłek kosztuję tyle samo co bananów False\n",
-      "Czy kilogram truskawek jest droższy niż kilogram bananów? True\n",
-      " Czy cena za kilogram truskawek różni się od ceny za kiogram jabłek? True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Zapytaj użytkownika o ceny trzech produktów i wypisz wyniki ich porównania.\n",
     "\n",
-    "jabłka = float(input(\"Ile kosztuję kilogram jabłek? \"))\n",
-    "banany = float(input(\"Ile kosztuję kilogram bananów? \"))\n",
-    "truskawki = float(input(\"Ile kosztuję kilogram truskawek? \"))\n",
+    "rower = float(input(\"Ile kosztuję rower? \"))\n",
+    "bilet_lotniczy = float(input(\"Ile kosztuje bilet lotniczy? \"))\n",
+    "laptop = float(input(\"Ile kosztuję laptop? \"))\n",
     "\n",
-    "print(f\"kilogram jabłek kosztuję tyle samo co bananów {jabłka == banany}\")\n",
-    "print(f\"Czy kilogram truskawek jest droższy niż kilogram bananów? {truskawki > banany}\")\n",
-    "print(f\" Czy cena za kilogram truskawek różni się od ceny za kiogram jabłek? {truskawki != jabłka}\")"
+    "print(f\"Czy rower kosztuję tyle samo co laptop {rower == laptop}\")\n",
+    "print(f\"Czy laptop jest droższy od biletu lotniczego? {laptop > bilet_lotniczy}\")\n",
+    "print(f\"Czy cena za laptopa różni się od ceny za bilet_lotniczy? {laptop != bilet_lotniczy}\")"
    ]
   },
   {
